# RCS_project

./: README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  rcs_project.html  requirements.txt  search.html  searchindex.js  tests.html
.github/workflows/: build_docs.yml  pytest.yml  tests.yml  tests_coverage.yml
_sources/: modules.rst.txt  rcs_project.rst.txt  tests.rst.txt
docs/: conf.py  index.rst
rcs_project/: __init__.py  fun.py  fun_oli.py  project_nb.ipynb  rcs_fun.py  rcs_ui_fun.py  ui.py
tests/: __init__.py  test_rcs_fun.py  test_rcs_project.py
