[tool.poetry]
name = "rcs-project"
version = "0.1.0"
description = "Refresher in computer science project"
authors = ["Olit <93828847+OlitHub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pillow = "^10.1.0"
matplotlib = "^3.8.0"
pytest = "^7.4.2"
svgwrite = "^1.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
